syntax = "proto3";

option csharp_namespace = "AElf.Kernel";

import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";
import "hash.proto";

message Transaction {
    Hash From = 1;
    Hash To = 2;
    uint64 RefBlockNumber = 3;
    bytes RefBlockPrefix = 4;
    uint64 IncrementId = 5;
    string MethodName = 6;
    bytes Params = 7;
    uint64 Fee = 8;
    bytes R = 9;
    bytes S = 10;
    bytes P = 11;
    TransactionType type = 12;
}

message TransactionList {
    repeated Transaction Transactions = 1;
}

enum TransactionType {
    ContractTransaction = 0;
    DposTransaction = 1;
}

enum Status {
    NotExisted = 0;
    Pending = 1;
    Failed = 2;
    Mined = 3;
}

message TransactionResult {
    Hash TransactionId = 1;
    Status Status = 2;
    repeated LogEvent Logs = 3;
    bytes Bloom = 4;
    bytes RetVal = 5;
    uint64 BlockNumber = 6;
    Hash BlockHash = 7;
}

message StateValueChange{
    DataPath Path = 1;
    bytes CurrentValue = 2;
}

message LogEvent {
    Hash Address = 1;
    repeated bytes Topics = 2;
    bytes Data = 3;
}

message RetVal {
    RetType Type = 1;
    bytes Data = 2;
    enum RetType {
        Void = 0;
        Bool = 1;
        Int32 = 2;
        UInt32 = 3;
        Int64 = 4;
        UInt64 = 5;
        String = 6;
        Bytes = 7;
        PbMessage = 8;
        UserType = 9;
    }
}

message BlockHeader {
    int32 Version = 1;
    Hash PreviousBlockHash = 2;
    Hash MerkleTreeRootOfTransactions = 3;
    Hash MerkleTreeRootOfWorldState = 4;
    bytes Bloom = 5;
    uint64 Index = 6;
    bytes R = 7;
    bytes S = 8;
    bytes P = 9;
    google.protobuf.Timestamp Time = 10;
    Hash ChainId = 11;
}

message BlockBody {
    Hash BlockHeader = 1;
    repeated Hash Transactions = 2;
}

message Block {
    BlockHeader Header = 1;
    BlockBody Body = 2;
    repeated Transaction fullTransactions = 3;
}

message SmartContractRegistration {
    int32 Category = 1;
    Hash ContractHash = 2;
    bytes ContractBytes = 3;
    int32 Type = 4;
}

message SmartContractDeployment {
    Hash ContractHash = 1;
    Hash Caller = 2;
    bytes ConstructParams = 3;
    uint64 IncrementId = 4;
}

message Parameters {
    repeated Param Params = 1;
}

message Param {
    oneof data {
        int32 intVal = 1;
        uint32 uintVal = 2;
        int64 longVal = 3;
        uint64 ulongVal = 4;
        bool boolVal = 5;
        bytes bytesVal = 6;
        string strVal = 7;
        double dVal = 8; // Maybe don't allow floating point
        Hash hashVal = 9;
        SmartContractRegistration registerVal = 10;
        SmartContractDeployment deploymentVal = 11;
    }
}

message SmartContractInvokeContext {
    Hash Caller = 1;
    uint64 IncrementId = 2;
    string MethodName = 3;
    bytes Params = 4;
}

message DataItem {
    Hash ResourcePath = 1;
    Hash ResourcePointer = 2;
    Hash StateMerkleTreeLeaf = 3;
}

message WorldState {
    repeated DataItem Data = 1;
}

message Chain {
    Hash Id = 1;
    Hash GenesisBlockHash = 2;
}

message Miners {
    repeated string Nodes = 1;
}

message BlockProducer {
    int32 Order = 1;
    bool IsEBP = 2; //EBP = Extra Block Producer
    Hash InValue = 3;
    Hash OutValue = 4;
    Hash Signature = 5;
    google.protobuf.Timestamp TimeSlot = 6;
}

message Round {
    map<string, BlockProducer> BlockProducers = 1;
}

message AElfDPoSInformation {
    repeated Round Rounds = 1;
}

enum DataAccessMode {
    ReadOnlyAccountSharing = 0;
    ReadWriteAccountSharing = 1;
    AccountSpecific = 2;
}

message Key {
    bytes Value = 1;
    string type = 2;
    uint32 HashType = 3;
}

message SideChainIdList {
    repeated Hash chainIds =1;
}

message DataPath {
    Hash ChainId = 1;
    uint64 BlockHeight = 2;
    Hash BlockProducerAddress = 3;
    Hash ContractAddress = 4;
    Hash DataProviderHash = 5;
    Hash KeyHash = 6;
}